# sse-k01-group1-poc

./: .gitignore  README.md  credentials.ini  google_calendar_fetcher.py  pyproject.toml  weather_forecast_getter.py
mowing/: DatePresenter.py  DemoDatePresenter.py  EventsFetcher.py  GoogleCalendarEventsFetcher.py  OpenWeatherInforFetcher.py  ProposedDateBinder.py  WeatherInfoFetcher.py  present_proposed_date.py
poc/: google_calendar_fetcher.py  utc2jst.py  weather_forecast_getter.py
